Replace deprecated usage of URL()
https://inside.java/2023/02/15/quality-heads-up/